welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: type mismatch;
 found   : Int
 required: java.awt.Color
	var x = getMondeHauteur();var T = Array[Color](x);
                                                       ^