welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
}
def rassemblage(){
	var x = getMondeHauteur();var T = Array[Color](x);
	for (i <- 1 to x){
		T(i) = getCouleurSol();avance();
	}
}